venue style updates

--- a/CSS/sass/components/_photo-mosaic.scss
+++ b/CSS/sass/components/_photo-mosaic.scss
@@ -64,14 +64,38 @@
     &.grand-canyon {
         background-image: url($grand-canyon);
     }
+    &.grand-canyon2 {
+        background-image: url($grand-canyon2);
+    }
+    &.grand-canyon3 {
+        background-image: url($grand-canyon3);
+    }
     &.sedona {
         background-image: url($sedona);
+    }
+    &.sedona2 {
+        background-image: url($sedona2);
+    }
+    &.sedona3 {
+        background-image: url($sedona3);
     }
     &.antelope-canyon {
         background-image: url($antelope-canyon);
     }
+    &.antelope-canyon2 {
+        background-image: url($antelope-canyon2);
+    }
+    &.antelope-canyon3 {
+        background-image: url($antelope-canyon3);
+    }
     &.tombstone {
         background-image: url($tombstone);
+    }
+    &.tombstone2 {
+        background-image: url($tombstone2);
+    }
+    &.tombstone3 {
+        background-image: url($tombstone3);
     }
     &.venue-main {
         background-image: url($venue-main);
