--- a/CSS/sass/global/_variables.scss
+++ b/CSS/sass/global/_variables.scss
@@ -73,10 +73,20 @@
 //world 2019 atmosphere photos
     $phoenix-city-photo:             'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/f7392b0b8124471f9d1bcf2edca2b624.jpg';
     $phoenix-city-photo2:            'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b20f6b7aed6140b286e2609052f3cc48.jpg';
+    $phoenix-city-photo3:            'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/da2159e822fe48f98c5c2af9726e51fb.jpg';
+    $phoenix-city-photo4:            'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/e1c822d00d2d44a286883d1ed44fc31b.jpg';
     $grand-canyon:                   'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/cab9c7d6c9ff4aacb6ccb81b3e1c0766.jpg';
+    $grand-canyon2:                  'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/7eff429c23924155a423b7be291143f0.jpg';
+    $grand-canyon3:                  'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c28ce3063a4f42f49402ed53f2606695.jpg';
     $sedona:                         'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/7cc276c96c7a45509059edf0fb6a98c9.jpg';
+    $sedona2:                        'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8ceb0303943b4d54ba7d7b8d4dc69dd0.jpg';
+    $sedona3:                        'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/ca6dea2c340f4fd782deff98e55b64bc.jpg';
     $antelope-canyon:                'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/fc5f709746a34cc1bbdbba1b431231fd.jpg';
+    $antelope-canyon2:               'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/d92db490e2d5489a93c599bbd5208c81.jpg';
+    $antelope-canyon3:               'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/2cf9eeb8ff08455f8d496d75cdd94902.jpg';
     $tombstone:                      'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/697448a555204b1aa73ac945276d19c7.jpg';
+    $tombstone2:                     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8eddba1eb72a47b28aa87d29fb8eb6e3.jpg';
+    $tombstone3:                     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/b7057f45e1754b6eba451bbcb390f2a7.jpg';
 
 //world 2018 atmosphere photos
     $world2018-keynote-wide-main-stage:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/2e0aa210bfcb4aee81f5ed949dfab7b4.jpg';
