--- a/CSS/sass/components/_photo-mosaic.scss
+++ b/CSS/sass/components/_photo-mosaic.scss
@@ -58,6 +58,15 @@
     &.phoenix-city {
         background-image: url($phoenix-city-photo);
     }
+    &.phoenix-city-photo2 {
+        background-image: url($phoenix-city-photo2);
+    }
+    &.phoenix-city-photo3 {
+        background-image: url($phoenix-city-photo3);
+    }
+    &.phoenix-city-photo4 {
+        background-image: url($phoenix-city-photo4);
+    }
     &.phoenix-city-landscape {
         background-image: url($phoenix-city-photo2);
     }
