--- a/CSS/sass/global/_variables.scss
+++ b/CSS/sass/global/_variables.scss
@@ -1,18 +1,35 @@
 //IMAGES
 
-//pattern backgrounds
+// red background patterns
     $pattern-squiggles:        'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6f6b7556d07045689f9e8286f782921d.png';
     $pattern-vertical-bars:    'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/220af6aecdde42f092299b48faa3ce6d.png';
     $pattern-round-dots:       'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c5c9895ba9e44fa4a033c85536aca668.png';
     $pattern-square-dots:      'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/bcd674ba39a84863930ac57971cd6f83.png';
+    
+    // orange background patterns
     $pattern-ribbon:           'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/bc7bbc66139042f88e518fb3b8c55e45.png';
     $pattern-ribbon-bw:        'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/910ac0e74c694ee1999c064277a25496.png';
     $pattern-stacked-bars:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/370ab0f99e744b6d89af831e4a7561f4.png';
+    $pattern-round-dots-orange:'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0936943a49d24583ac2e20a4b75d852f.png';
+
+
+// blue background patterns    
     $pattern-split-circles:    'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6cb9dd20ab114d138a8bf677067e2def.png';
     $pattern-triangles:        'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/fa295d6e2e474160a93c096fdf3ac439.png';
     $pattern-static-triangles: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/47a9583e4b1f4af2bd2d5ab993252ba2.png';
     $pattern-sparse-triangles: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/eb5e65b4118744a582f05cca7b7d5739.png';
+    $pattern-maze:             'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/7c3e1632d5bb4117a0010c694daa2323.png';
+
+// white background patterns
     $pattern-tartan:           'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/057e531bdf0e4266afb60a8555922349.png';
+
+// navy background patterns
+    $pattern-horseshoe:        'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c2d51c08fb5a407f9a49aaccaf7b9ca4.png';
+    $pattern-squiggles-navy:   'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/5bcbf578400c4e72a8a1100e13bb86fd.png';
+
+// green background patterns
+    $pattern-abstract:         'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/38f0a1dd998c4abf946b205d898c14c6.png';
+    $pattern-confetti:         'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/50daab9f55de409b890eb6ff7460573f.png';
 
 //special event photos
     $customer-awards:         'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/fe5f8a96c4e14b92aff0da7466c585a0.jpg';
