--- a/CSS/sass/pages/_agenda.scss
+++ b/CSS/sass/pages/_agenda.scss
@@ -158,7 +158,7 @@ input[type='search'] {
 		}
 	}
 
-	.theme-label, .topic-label, .role-label, .session-label{
+	.theme-label, .topic-label, .role-label, .session-label, .date-label, .time-label{
 		transition: all .5s ease-in-out;
 		&.menu-open::after {
 			transform: rotate(-45deg);
@@ -182,11 +182,13 @@ input[type='search'] {
 	.topic-label:before {background-color:$orange;}
 	.role-label:before {background-color:$blue;}
 	.session-label:before {background-color:$green;}
+	.date-label:before {background-color:$white;}
+	.time-label:before {background-color:$white;}
 
-	.theme-label, .role-label, .topic-label, .session-label {
+	.theme-label, .role-label, .topic-label, .session-label, .date-label, .time-label {
 		cursor: pointer;
 	}
-	#theme-filter, #role-filter, #topic-filter, #session-filter {
+	#theme-filter, #role-filter, #topic-filter, #session-filter, #date-filter, #time-filter {
 		display:block;
 		position:relative;
 		width: 100%;
@@ -397,7 +399,7 @@ input[type='search'] {
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-color: darken($light-gray, 5%);
+	background-color: darken($orange, 5%);
 	width: 9%;
 	height: 100vh;
     font-size: 14px;
@@ -406,6 +408,7 @@ input[type='search'] {
 	font-weight: 400;
 	padding: 1em;
 	margin-top: 0;
+	color: $white;
 }
 
 .session-description {
