added new declaration for one-on-one image

--- a/CSS/sass/components/_photo-mosaic.scss
+++ b/CSS/sass/components/_photo-mosaic.scss
@@ -186,5 +186,9 @@
     &.block-party {
         background-image: url($block-party);
     }
+    &.one-on-one {
+        background-image: url($one-on-one);
+        background-position: left center;
+    }
 
 }
