added new variable for one-on-one image

--- a/CSS/sass/global/_variables.scss
+++ b/CSS/sass/global/_variables.scss
@@ -44,18 +44,19 @@
     $dossier:                 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/4165da942d644af4b39f57b379d05426.jpg';
     $tech-talks:              'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/faa0b7d56fb3433b86d14445bc836472.jpg';
     $datathon:                'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/7259fb9973fa4524a506183923a2b447.jpg';
+    $one-on-one:              'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3373d9faae1b415c843370a34f95de3d.jpg';
 
 //venue photos
-    $venue-main:                     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8b30859d447a4797b6e0f5bce49a4028.jpg';
-    $venue-second:                   'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3cd2212029744005a02c6f25a48f61c0.jpg';
-    $venue-third:                    'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6f516e73056049558d1207c375d796e8.jpg';
-    $accommodations-main:            'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6bddec41b5c24ca79b3b10b51a3d9460.jpg';
-    $venue-main-vert:                'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/38d745131bb54f26b5c260f07cd38157.jpg';
-    $venue-room:                     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c3889b97d2754a568dee08c6e4abce24.jpg';
-    $venue-pool:                     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/52180804f62f4cf5b17f44a8be88e67b.jpg';
-    $venue-casino:                   'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/ff85c3018018440ba1715f193daa0df1.jpg';
-    $venue-food:                     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/705de1d30c6b49d3b395939e5c813c00.jpg';
-    $venue-spa:                      'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8e80530da1754f738b7c3cc43a3b52bc.jpg';
+    $venue-main:              'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8b30859d447a4797b6e0f5bce49a4028.jpg';
+    $venue-second:            'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3cd2212029744005a02c6f25a48f61c0.jpg';
+    $venue-third:             'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6f516e73056049558d1207c375d796e8.jpg';
+    $accommodations-main:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6bddec41b5c24ca79b3b10b51a3d9460.jpg';
+    $venue-main-vert:         'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/38d745131bb54f26b5c260f07cd38157.jpg';
+    $venue-room:              'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c3889b97d2754a568dee08c6e4abce24.jpg';
+    $venue-pool:              'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/52180804f62f4cf5b17f44a8be88e67b.jpg';
+    $venue-casino:            'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/ff85c3018018440ba1715f193daa0df1.jpg';
+    $venue-food:              'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/705de1d30c6b49d3b395939e5c813c00.jpg';
+    $venue-spa:               'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8e80530da1754f738b7c3cc43a3b52bc.jpg';
 
 //thumbnails for videos and documents
     $world2018-keynote-mjs:          'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/69cfa3bee5e744ab8ebf530d84e462f7.jpg';
