--- a/CSS/sass/pages/_agenda.scss
+++ b/CSS/sass/pages/_agenda.scss
@@ -4,6 +4,12 @@
 		background-color: rgba(0,0,0,0.2);
 		box-shadow:1px 1px 5px rgba(0,0,0,0.5);
 	}
+
+	.grid-item {
+		&:hover {
+			cursor: pointer;
+		}
+	}
 }
 
 .tabs-menu {
