--- a/CSS/sass/pages/_agenda.scss
+++ b/CSS/sass/pages/_agenda.scss
@@ -100,6 +100,23 @@
 		}
 	}
 
+	#applied-filters {
+		display: flex;
+		align-items: center;
+		margin-left: 1em;
+		ul{
+			display: flex;
+			align-items: center;
+			margin: 0;
+			&>li {
+				margin: 0 .2em;
+
+				&:before {
+					border: none;
+				}
+			}
+		}
+	}
 }
 #search-btn {
 	display: inline-block;
