--- a/CSS/sass/global/_cvent-overrides.scss
+++ b/CSS/sass/global/_cvent-overrides.scss
@@ -385,7 +385,7 @@ td.Line1 {
     div.register-btn-bottom div.register-btn-bottom,
     .reg-summary-content div.register-btn-bottom,
     .reg-payment-tables>.reg-third-header {
-        padding: 5%;
+        padding: 10px;
     }
 
     .reg-section.reg-questions div.register-btn-bottom {
