--- a/CSS/sass/global/_variables.scss
+++ b/CSS/sass/global/_variables.scss
@@ -5,7 +5,7 @@
     $pattern-vertical-bars:    'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/220af6aecdde42f092299b48faa3ce6d.png';
     $pattern-round-dots:       'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c5c9895ba9e44fa4a033c85536aca668.png';
     $pattern-square-dots:      'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/bcd674ba39a84863930ac57971cd6f83.png';
-    
+
     // orange background patterns
     $pattern-ribbon:           'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/bc7bbc66139042f88e518fb3b8c55e45.png';
     $pattern-ribbon-bw:        'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/910ac0e74c694ee1999c064277a25496.png';
@@ -13,7 +13,7 @@
     $pattern-round-dots-orange:'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/0936943a49d24583ac2e20a4b75d852f.png';
 
 
-// blue background patterns    
+// blue background patterns
     $pattern-split-circles:    'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6cb9dd20ab114d138a8bf677067e2def.png';
     $pattern-triangles:        'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/fa295d6e2e474160a93c096fdf3ac439.png';
     $pattern-static-triangles: 'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/47a9583e4b1f4af2bd2d5ab993252ba2.png';
@@ -48,9 +48,11 @@
 
 //venue photos
     $venue-main:              'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/8b30859d447a4797b6e0f5bce49a4028.jpg';
-    $venue-second:            'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3cd2212029744005a02c6f25a48f61c0.jpg';
-    $venue-third:             'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6f516e73056049558d1207c375d796e8.jpg';
-    $accommodations-main:     'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6bddec41b5c24ca79b3b10b51a3d9460.jpg';
+    $venue-sheraton:          'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/3cd2212029744005a02c6f25a48f61c0.jpg';
+    $venue-renaissance:       'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6f516e73056049558d1207c375d796e8.jpg';
+    $venue-hyatt:             'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/6bddec41b5c24ca79b3b10b51a3d9460.jpg';
+    $venue-hampton:           'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/fc6166580de945cd9428e846d0ce2a52.jpg';
+    $accommodations-main:     '';
     $venue-main-vert:         'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/38d745131bb54f26b5c260f07cd38157.jpg';
     $venue-room:              'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/c3889b97d2754a568dee08c6e4abce24.jpg';
     $venue-pool:              'https://custom.cvent.com/83AD54AE0B7F4CBC94A9A945D0A278DA/pix/52180804f62f4cf5b17f44a8be88e67b.jpg';
@@ -152,13 +154,15 @@
     // breakpoints
     $sm-breakpoint: 320px;
     $md-breakpoint:  768px;
-    $lg-breakpoint: 1100px;
-    $xl-breakpoint:  1400px;
+    $lg-breakpoint: 1024px;
+    $xl-breakpoint:  1280px;
+    $xxl-breakpoint:  1440px;
 
     $small-only: $sm-breakpoint;
     $medium: $md-breakpoint;
     $large: $lg-breakpoint;
     $xlarge: $xl-breakpoint;
+    $doubleLarge: $xxl-breakpoint;
 
 
 // COLORS
