added new xxl breakpoint

--- a/CSS/sass/global/mixins/_layout.scss
+++ b/CSS/sass/global/mixins/_layout.scss
@@ -35,6 +35,11 @@
         @content;
     }
 }
+@mixin doubleLarge {
+    @media (min-width: #{$doubleLarge}){
+        @content;
+    }
+}
 
 // POSITIONING
 
